# Agentic-AutoRAG

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agentic_autorag/: __main__.py  cli.py  orchestrator.py
agentic_autorag/config/: __init__.py  loader.py  models.py
agentic_autorag/engine/: index_builder.py  parsers.py  pipeline.py  vector_store.py
agentic_autorag/examiner/: __init__.py  clustering.py  evaluator.py  exam_agent.py  exam_refiner.py  irt.py
agentic_autorag/optimizer/: __init__.py  history.py  reasoning_agent.py
agentic_autorag/optimizer/prompts/: diagnostic.txt  initial_proposal.txt  proposal.txt
agentic_autorag/registry/: __init__.py  index_registry.py
configs/: full.yaml  starter.yaml
docs/: optimization_loop.html
scripts/: download_arxiv_corpus.py  run_agent_once.py  run_single_trial.py
tests/: conftest.py  test_clustering.py  test_config.py  test_evaluator.py  test_exam_agent.py  test_exam_quality.py  test_history.py  test_index_builder.py  test_irt.py  test_orchestrator.py  test_parsers.py  test_pipeline.py  test_reasoning_agent.py  test_vector_store.py
