[project]
name = "agentic-autorag"
version = "0.1.0"
description = "Reasoning-driven agentic framework for RAG optimization"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Lasse Bærland Strand" },
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pymupdf4llm>=0.0.17",
    "docling>=2.0",
    "lancedb",
    "litellm",
    "scikit-learn",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "arxiv>=2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that are slow (e.g. PDF parsing with model downloads). Skipped by default, run with --run-slow.",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
extend-ignore = ["D102", "D103"]

[tool.ruff.lint.isort]
known-first-party = ["agentic_autorag"]